--- a/Day3-Multimedia/index.html
+++ b/Day3-Multimedia/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="so">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Day 3 — Multimedia</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <header><h1>Video Landing / Bogga Fiidiyowga</h1></header>
+  <header>
+    <h1>Video Landing / Bogga Fiidiyowga</h1>
+  </header>
   <section class="hero">
     <video autoplay muted loop playsinline poster="poster.jpg">
       <source src="sample-video.mp4" type="video/mp4">
@@ -27,4 +31,5 @@
     </audio>
   </section>
 </body>
+
 </html>
